syntax = "proto3";

option go_package = "replication/proto";                                                                      

package proto;

message NodeSequences {
  map<uint64, uint64> clock = 1;
}

message Timestamp {
  int64 unix_time = 1;
  int64 lamport_clock = 2;
}

message DataStream {
  uint32 stream_id = 1;
  bytes data = 2;
}

message Update {
  uint64 node_id = 6;
  uint64 sequence_number = 7;
  Timestamp timestamp = 1;
  enum UpdateType {
    DELETE_RECORD = 0;
    UPSERT_RECORD = 1;
    CREATE_DATABASE = 2;
    DROP_DATABASE = 3;
    SUPERCEDED = 4;
  }
  UpdateType type = 2;
  string record_id = 3;
  repeated DataStream data_streams = 4;
  string database_name = 5;
}

message GossipMessage {
  string node_id = 1;
  repeated string known_peers = 2;
  NodeSequences node_sequences = 3;
}

message UpdateRequest {
  NodeSequences since = 1;
  int32 max_results = 2;
}

message BatchUpdate {
  repeated Update updates = 1;
  bool has_more = 2;
}

message Heartbeat {
  NodeSequences node_sequences = 1;
}

message Message {
  enum MessageType {
    GOSSIP = 0;
    UPDATE = 1;
    UPDATE_REQUEST = 2;
    BATCH_UPDATE = 3;
    HEARTBEAT = 4;
  }
  MessageType type = 1;
  Timestamp time_stamp = 6;
  oneof content {
    GossipMessage gossip_message = 2;
    Update update = 3;
    UpdateRequest update_request = 4;
    BatchUpdate batch_update = 5;
    Heartbeat heartbeat = 7;
  }
}
